test/asm/extrn1.err
Error: extrn1.asm: 5: EXTRN outside segment:
    EXTRN   blurt: WORD
            ^
Errors: 1
